--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,16 @@
 body {
     flex: 1;
     background-color: white;
-    margin: 0px;  
+    margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
     overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+* {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
